--- a/src/app/Components/MainPage/header-of-page/header-of-page.component.scss
+++ b/src/app/Components/MainPage/header-of-page/header-of-page.component.scss
@@ -31,3 +31,10 @@ ul{
     }
     
 }
+button{
+    color:#692F94 ;
+    font-weight: 600!important;
+    &:hover{
+        color: #ffc000;
+    }
+}
