--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-left: 15px;
   line-height: 36px;
 }
+
+
+////spinner
+/// 
+
