--- a/src/app/Components/MainPage/main-slider/main-slider.component.html
+++ b/src/app/Components/MainPage/main-slider/main-slider.component.html
@@ -54,3 +54,8 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <div class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
