--- a/src/app/Components/Registeration/mentor-registeration/mentor-registeration.component.html
+++ b/src/app/Components/Registeration/mentor-registeration/mentor-registeration.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-0">
-    <img src="../../../../assets/Images/Join us as a mentor.gif" alt=".." class="poster" />
+    <img src="../../../../assets/Images/maleprofile.jpg" alt=".." class="poster" />
     <div class="container mb-5">
         <div class="card mt-5 bg-light">
             <div class="card-body">
@@ -220,3 +220,8 @@
     </div>
 
 </div>
+<div class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
