--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,37 +1,43 @@
 <!-- Login modal -->
 
 <div>
-    <div class="modal-dialog modal-dialog-centered">
+    <div >
       <div class="modal-content">
         <div class="modal-header" style="background-color: #5b3473!important;">
-          <h2 class="modal-title" style="color: white;" id="exampleModalToggleLabel">Login As </h2>
-          
-          <button type="button" class="btn-close btn btn-primary" style="color: white; background-color: #ffc000!important;"  data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
+          <h2 class="modal-title" style="color: white;" id="exampleModalToggleLabel">Login As{{modelTitle}} </h2>
+          <button type="button" 
+          class="btn-close btn btn-primary" style="color: white; background-color: #ffc000!important;" 
+           (click)="closeModel()" aria-label="Close"></button>
+
+                  </div>
         <div class="modal-body">
           <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
               <img src="../../../../assets/Images/graduated.png" style="width: 100px;" height="80px" class="nav-link active"
-               id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"/>
+               id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" (click)="changeTitle('s')"/>
             </li>
             <li class="nav-item" role="presentation">
-              <img src="../../../../assets/Images/video.png" style="width: 100; height: 80px; padding: -2;" class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false"/>
+              <img src="../../../../assets/Images/video.png" 
+              style="width: 100; height: 80px; padding: -2;" class="nav-link" 
+              id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" 
+              type="button" role="tab" aria-controls="profile" aria-selected="false" (click)="changeTitle('m')"/>
             </li>
           </ul>
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <form class="mt-4 mx-4">
+              <form class="mt-4 mx-4" #studentForm="ngForm" (ngSubmit)="getStudentFormData(studentForm.value)">
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="email" id="form2Example1" class="form-control" />
+                  <input type="email" id="form2Example1" class="form-control" [(ngModel)]="email" [ngClass]="{ 'invalid-input': isInvalidCredentials }" name="email" />
                   <label class="form-label" for="form2Example1">Email address</label>
                 </div>
               
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form2Example2" class="form-control" />
+                  <input type="password" id="form2Example2" class="form-control" [(ngModel)]="pass" [ngClass]="{ 'invalid-input': isInvalidCredentials }" name="pass"/>
                   <label class="form-label" for="form2Example2">Password</label>
                 </div>
+                <div class="d-flex justify-content-center text-danger" *ngIf="isInvalidCredentials">Incorrect email and password</div>
               
                 <!-- 2 column grid layout for inline styling -->
                 <div class="row mb-4">
@@ -45,11 +51,11 @@
               
                 <!-- Submit button -->
                 <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary btn-block mb-4 px-5">Sign in</button>
+                <button type="submit" class="btn btn-primary btn-block mb-4 px-5">Sign in</button>
               </div>
                 <!-- Register buttons -->
                 <div class="text-center">
-                  <p>Not a member? <a href="#!">Register</a></p>
+                  <p>Not a member? <button class="reg" (click)="OpenRegisterationForm()">Register</button></p>
                   
                   <button type="button" class="btn btn-link btn-floating mx-1">
                     <i class="fab fa-facebook-f"></i>
@@ -69,17 +75,18 @@
                 </div>
               </form>
             </div>
+
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <form class="mt-4 mx-4">
+              <form class="mt-4 mx-4" #mentorForm="ngForm" (ngSubmit)="getMentorFormData(mentorForm.value)">
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="email" id="form2Example1" class="form-control" />
+                  <input type="email" id="form2Example1" class="form-control" ngModel name="email"  [ngClass]="{ 'invalid-input': isInvalidCredentials }"/>
                   <label class="form-label" for="form2Example1">Email address</label>
                 </div>
               
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form2Example2" class="form-control" />
+                  <input type="password" id="form2Example2" class="form-control" ngModel name="pass"  [ngClass]="{ 'invalid-input': isInvalidCredentials }"/>
                   <label class="form-label" for="form2Example2">Password</label>
                 </div>
               
@@ -95,11 +102,11 @@
               
                 <!-- Submit button -->
                 <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary btn-block mb-4 px-5">Sign in</button>
+                <button type="submit" class="btn btn-primary btn-block mb-4 px-5">Sign in</button>
               </div>
                 <!-- Register buttons -->
                 <div class="text-center">
-                  <p>Not a member? <a href="#!">Register</a></p>
+                  <p>Not a member?  <button class="reg" (click)="OpenRegisterationForm()">Register</button></p>
                   
                   <button type="button" class="btn btn-link btn-floating mx-1">
                     <i class="fab fa-facebook-f"></i>
